--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <hr>
   <!-- Imagenes -->
   <!-- Imagen desde ruta -->
-  <img width="50%" src="/assets/01h00hhdb701z320wa1x-5beb735c.webp" alt="El bicho">
+  <img width="50%" src="assets/imgs/01h00hhdb701z320wa1x.webp" alt="El bicho">
 
   <!-- Imagen desde link -->
   <img width="50%"
@@ -46,7 +46,7 @@
     alt="El otro bicho">
 
   <!-- Video -->
-  <video autoplay width="50%" src="/assets/videos cortos    10 segundos-cc8f3603.mp4" controls></video>
+  <video autoplay width="50%" src="assets/videos/videos cortos    10 segundos.mp4" controls></video>
 
   <!-- Audio -->
   <audio src="assets/audios/Kanye West - Can u be feat. Travis Scott [V2].mp3" controls></audio>
